--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitignorer",
+  "name": "git-ignore",
   "version": "0.0.1",
   "description": "Add .gitignore files to your projects from the command-line",
   "main": "lib/index.js",
@@ -8,7 +8,7 @@
     "lint": "eslint index.js"
   },
   "bin": {
-    "gitignorer": "bin/gitignorer.js"
+    "ignore": "bin/cli.js"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "chalk": "^1.1.3",
-    "inquirer": "^2.0.0"
+    "inquirer": "^2.0.0",
+    "log-symbols": "^1.0.2"
   }
 }
